created style.css. created custom event to display input when timer ends

--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css"> 
     <title>Code Quiz</title>
 </head>
 <body>
     <p id="Timer"></p>
     <button id="startBtn">Start</button>
+
+    <ol id="highscoresList">
+        Highscores
+    </ol>
+
+    <input id="initialInput" value="put initials here">
     <script src="script.js"></script>
 </body>
 </html>
