created submit initials input that appears when timer runs out and dissapears when start button is clicked

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <ol id="highscoresList">
         Highscores
     </ol>
-
-    <input id="initialInput" value="put initials here">
+    <div id="submitHighscore">
+        <input id="initalsInput"value="put initials here"> <button id="submitBtn">Submit</button> </input>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
