score is now shown on highscore list

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 <body>
     <p id="Timer"></p>
     <button id="startBtn">Start</button>
+    <button id="testBtn">Finish</button>
 
     <ol id="highscoresList">
         Highscores
     </ol>
     <div id="submitHighscore">
-        <input id="initalsInput"value="put initials here"> <button id="submitBtn">Submit</button> </input>
+        <input id="initalsInput" value="put initials here"> <button id="submitBtn">Submit</button> </input>
     </div>
     <script src="script.js"></script>
 </body>
