added functionality for highscore list to be sorted highest score -> lowest score

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <ol id="highscoresList">
         Highscores
     </ol>
-    <div id="submitHighscore">
+    <div id="submitHighscore" class="hide">
         <input id="initalsInput" value="put initials here"> <button id="submitBtn">Submit</button> </input>
     </div>
     <script src="script.js"></script>
