--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
     <title>Code Quiz</title>
 </head>
 <body>
+    <a href="highscores.html">Highscores</a>
+
     <p id="Timer"></p>
     <button id="startBtn">Start</button>
     <button id="testBtn">Finish</button>
 
-    <ol id="highscoresList">
-        Highscores
-    </ol>
     <div id="submitHighscore" class="hide">
-        <input id="initalsInput" value="put initials here"> <button id="submitBtn">Submit</button> </input>
+        <input id="initalsInput" placeholder="put initials here"> <button id="submitBtn">Submit</button> </input>
     </div>
     <script src="script.js"></script>
 </body>
