added a clear highscores list function

--- a/highscores.html
+++ b/highscores.html
@@ -8,10 +8,12 @@
 </head>
 <body>  
     <a href="index.html">Back</a>
-
+<div>
+    Highscores
     <ol id="highscoresList">
-        Highscores
     </ol>
+</div>
+    <button id="clearBtn">Clear Highscores</button>
     <script src="highscores.js"></script>
 </body>
 </html>
