--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
     <a href="highscores.html">Highscores</a>
 
     <p id="Timer"></p>
-    <button id="startBtn">Start</button>
-    <button id="testBtn">Finish</button>
 
+    <main>
+
+        gobildeegook pls start the Quiz<br>
+        <button id="startBtn">Start</button>
+    </main>
     
+    <button id="testBtn">time down</button>
+
     <div id="submitHighscore" class="hide">
         <input id="initalsInput" placeholder="put initials here"> <button id="submitBtn">Submit</button> </input>
     </div>
