rendered question options when start button is pressed, changed how areas are hidden to set class instead of style

--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
 
     <p id="Timer"></p>
 
-    <main>
+    <div id="startArea">
 
         gobildeegook pls start the Quiz<br>
         <button id="startBtn">Start</button>
-    </main>
+    </div>
+
+    <div id="questionArea" class="hide">
+        <h2 id="Title"></h2>
+        <div id="questions"></div>
+    </div>
     
     <button id="testBtn">time down</button>
 
