fixed how scores are cleared to prevent error when submitting score caused by attempting to parse an empty key

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div id="startArea">
 
-        gobildeegook pls start the Quiz<br>
+        start the Quiz
         <button id="startBtn">Start</button>
     </div>
 
@@ -22,7 +22,7 @@
         <div id="questions"></div>
     </div>
     
-    <button id="testBtn">time down</button>
+    <!-- <button id="testBtn">time down</button> -->
 
     <div id="submitHighscore" class="hide">
         <input id="initalsInput" placeholder="put initials here"> <button id="submitBtn">Submit</button> </input>
