did some css styling on the highscore page, question area and start area

--- a/highscores.html
+++ b/highscores.html
@@ -9,7 +9,7 @@
 <body>  
     <a href="index.html">Back</a>
 <div>
-    Highscores
+    <p class="listTitle">Highscores</p>
     <ol id="highscoresList">
     </ol>
 </div>
