--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <a href="highscores.html">Highscores</a>
 
-    <p id="Timer"></p>
+    <span id="Timer"></span>
 
     <div id="startArea">
 
-        start the Quiz
+        <p class="startText">Start the Quiz</p>
         <button id="startBtn">Start</button>
     </div>
 
