stylized the submit form, submit form can be submitted through hitting enter and submit button now”

--- a/highscores.html
+++ b/highscores.html
@@ -7,13 +7,14 @@
     <title>Code Quiz</title>
 </head>
 <body>  
-    <a href="index.html">Back</a>
-<div>
+    <!-- <a href="index.html">Back</a> -->
+<div class="hsArea">
     <p class="listTitle">Highscores</p>
     <ol id="highscoresList">
     </ol>
-</div>
+    <button class="backBtn"><a href="index.html">Back</a></button>
     <button id="clearBtn">Clear Highscores</button>
+</div>
     <script src="highscores.js"></script>
 </body>
 </html>
